# trivialai

./: README.md  pyproject.toml  requirements.txt  unittest.sh
.github/workflows/: python-publish.yml
src/trivialai/: __init__.py  _factory.py  agent.py  async_utils.py  bedrock.py  bistream.py  chatgpt.py  claude.py  deepseek.py  filesystem.py  gcp.py  gemini.py  image.py  llm.py  ollama.py  pbt.py  stabdiff.py  tools.py  util.py
src/trivialai/agent/: core.py  pbt.py  prompting.py  toolkit.py
src/trivialai/embedding/: bedrock.py  core.py
src/trivialai/vectorstore/: base.py  chromadb.py  core.py
tests/: test_bedrock.py  test_bistream.py  test_factory.py  test_jsonesque.py  test_llm.py  test_ollama.py  test_tools.py  test_util.py
