[project]
name = "trivialai"
version = "0.7.4"
authors = [
  { name="inaimathi", email="leo.zovic@gmail.com" },
]
description = "A trivial set of API bindings for AI models, because I'd like them to be easy to use."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "httpx~=0.27",
  "tenacity>=9.1,<10",
  "json5",
  "chromadb>=1.0,<2",
]

[project.optional-dependencies]
http2 = [
  "httpx[http2]~=0.27",
]

bedrock = [
  "boto3>=1.40,<2",
  "Pillow>=12,<13",
]

gemini = [
  "google-genai>=1.0,<2",
  "google-auth>=2.31,<3",
  "Pillow>=12,<13",
]

image = [
  "Pillow>=12,<13",
]

all = [
  "httpx[http2]~=0.27",
  "boto3>=1.40,<2",
  "google-genai>=1.0,<2",
  "google-auth>=2.31,<3",
  "Pillow>=12,<13",
]

[project.urls]
Homepage = "https://github.com/inaimathi/trivialai"
Issues = "https://github.com/inaimathi/trivialai/issues"